--- a/index.html
+++ b/index.html
@@ -193,11 +193,11 @@
             <div class="p-8 space-y-5">
                 <div>
                     <label class="text-[9px] font-black text-slate-400 uppercase tracking-widest">Facilitator Full Name</label>
-                    <input id="init-user-name" class="w-full mt-1 p-3 bg-slate-50 border border-slate-200 rounded-xl focus:outline-none focus:border-perpetual font-bold text-sm" placeholder="e.g. John Doe">
+                    <input id="init-user-name" class="w-full mt-1 p-3 bg-slate-50 border border-slate-200 rounded-xl focus:outline-none focus:border-perpetual font-bold text-sm" placeholder="e.g. XYZ">
                 </div>
                 <div>
                     <label class="text-[9px] font-black text-slate-400 uppercase tracking-widest">Study/Project Title</label>
-                    <input id="init-proj-title" class="w-full mt-1 p-3 bg-slate-50 border border-slate-200 rounded-xl focus:outline-none focus:border-perpetual font-bold text-sm" placeholder="e.g. SSP Plant Crystallizer Upgrade">
+                    <input id="init-proj-title" class="w-full mt-1 p-3 bg-slate-50 border border-slate-200 rounded-xl focus:outline-none focus:border-perpetual font-bold text-sm" placeholder="e.g. Hot Water System">
                 </div>
                 <div class="pt-4 flex gap-3">
                     <button onclick="closeProjectModal()" class="flex-1 py-3 text-[10px] font-black uppercase text-slate-400 hover:text-slate-600 transition-all">Cancel</button>
@@ -212,7 +212,7 @@
         const TEMPLATE = (id, user, proj) => ({
             currentView: 'worksheet',
             project: proj || "New HAZOP Study",
-            facilitator: user || "Anurag Yamnurwar",
+            facilitator: user || "Anurag",
             id: id || "STUDY-" + Math.floor(Math.random() * 90000 + 10000),
             plant: "Enter...",
             node: "Enter...",
